[gd_scene load_steps=6 format=3 uid="uid://vpo25vd2qome"]

[ext_resource type="Script" path="res://Scenes/table.gd" id="1_qdwi6"]
[ext_resource type="Texture2D" uid="uid://bij2fd6y53s6s" path="res://Assets/Background/table.png" id="1_v13ux"]
[ext_resource type="PackedScene" uid="uid://b8bg8rhv4b475" path="res://Scenes/Puzzles/puzzle_one.tscn" id="2_u1585"]
[ext_resource type="PackedScene" uid="uid://ceioqqddblb5a" path="res://Scenes/Menu/bottom_bar.tscn" id="3_1eslt"]
[ext_resource type="FontFile" uid="uid://c3eqtmu8yarnp" path="res://Assets/Minecraft.ttf" id="4_1tp6i"]

[node name="Table" type="Node2D"]
script = ExtResource("1_qdwi6")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(161, 121)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_v13ux")

[node name="puzzle_one" parent="Sprite2D" instance=ExtResource("2_u1585")]
position = Vector2(-150, -128)

[node name="Button" type="Button" parent="Sprite2D"]
offset_left = 74.0
offset_top = -214.0
offset_right = 104.0
offset_bottom = -182.0
flat = true

[node name="Button2" type="Button" parent="Sprite2D"]
offset_left = -290.0
offset_top = -218.0
offset_right = -214.0
offset_bottom = -186.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("4_1tp6i")
theme_override_font_sizes/font_size = 16
text = "Back"
flat = true

[node name="BottomBar" parent="Sprite2D" instance=ExtResource("3_1eslt")]

[connection signal="pressed" from="Sprite2D/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Sprite2D/Button2" to="." method="_on_button_2_pressed"]
